--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,62 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW
     +ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+        rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="../css/style.css">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
-    
+
+
 
 
     <title>Crossover.sf Shop</title>
 </head>
+
 <body class="body_background">
 
     <header>
         <div class="big_navbar">
-        <div class="mid_head">
-            <div class="nombre_head"><p>Crossover.sf</p></div>
-            <form class="search-box" action="/buscar" method="get">
-                <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita" style="color: #ffffff;"></i></button>
-            </form>
-        </div>
-        <div class="abajo">
-            <nav class="bot_head">
-                <ul>
-                    <li><a><div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div></a></li>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <!-- <li><a href="rebajas.html">Rebajas</a></li>
+            <div class="mid_head">
+                <div class="nombre_head">
+                    <p>Crossover.sf</p>
+                </div>
+                <form class="search-box" action="/buscar" method="get">
+                    <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
+                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
+                            style="color: #ffffff;"></i></button>
+                </form>
+            </div>
+            <div class="abajo">
+                <nav class="bot_head">
+                    <ul>
+                        <li><a>
+                                <div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div>
+                            </a></li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <!-- <li><a href="rebajas.html">Rebajas</a></li>
                     <li><a href="verano.html">Verano</a></li>
                     <li><a href="novedades.html">Novedades</a></li>-->
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-            <hr>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+                <hr>
+            </div>
         </div>
-    </div>
     </header>
 
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
         <div class="container-fluid">
-            <div class="nombre_head"><p>Crossover.sf</p></div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="nombre_head">
+                <p>Crossover.sf</p>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENÚ</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
                 </div>
 
                 <div class="offcanvas-body">
@@ -73,7 +87,8 @@
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita" style="color: #ffffff;"></i></button>
+                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
+                                    style="color: #ffffff;"></i></button>
                         </form>
                     </div>
                 </div>
@@ -82,64 +97,73 @@
     </nav>
 
     <div class="body_contact">
-    <div class="accordion-container">
-        <div class="accordion" id="accordionExample">
-            <!-- Política de Devoluciones -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Política de Devoluciones
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>Aca pondríamos la política de devoluciones de la tienda.</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut facilis illo alias cupiditate eius itaque explicabo fugiat.
+        <div class="accordion-container">
+            <div class="accordion" id="accordionExample">
+                <!-- Política de Devoluciones -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Política de Devoluciones
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Aca pondríamos la política de devoluciones de la tienda.</strong> Lorem ipsum dolor
+                            sit amet, consectetur adipisicing elit. Aut facilis illo alias cupiditate eius itaque
+                            explicabo fugiat.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Métodos de Pago -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Métodos de Pago
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>Información sobre métodos de pago.</strong> Puedes incluir detalles sobre transferencias, tarjetas, etc.
+                <!-- Métodos de Pago -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Métodos de Pago
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Información sobre métodos de pago.</strong> Puedes incluir detalles sobre
+                            transferencias, tarjetas, etc.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Métodos de Envío -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Métodos de Envío (A todo el país)
-                    </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>Información sobre métodos de envío.</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                <!-- Métodos de Envío -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Métodos de Envío (A todo el país)
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Información sobre métodos de envío.</strong> Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Días y Horarios de Atención -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        Días y horarios de atención al público
-                    </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>Horario de atención.</strong> Puedes detallar los días y horarios en los que la tienda está abierta al público.
+                <!-- Días y Horarios de Atención -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Días y horarios de atención al público
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Horario de atención.</strong> Puedes detallar los días y horarios en los que la
+                            tienda está abierta al público.
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-    
+
 
 
     <footer>
@@ -151,10 +175,11 @@
                 <div class="social-links">
                     <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                    <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i class="fa-brands fa-whatsapp fa-flip fa-2xl"></i></i></a>
+                    <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
+                            class="fa-brands fa-whatsapp fa-flip fa-2xl"></i></i></a>
                 </div>
             </div>
-    
+
             <div class="sec_foot">
                 <h3>Información y Preguntas Frecuentes</h3>
                 <ul class="sublinks_1">
@@ -163,18 +188,30 @@
                     <li><a href="faq.html">Métodos de Envío</a></li>
                 </ul>
             </div>
-    
+
             <div class="thi_foot">
                 <h3>¿Dónde estamos?</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d90467.83854046576!2d-60.779867669838396!3d-31.610485039551904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!3m2!1d-31.6106578!2d-60.697294!4m0!5e1!3m2!1ses-419!2sar!4v1733861449142!5m2!1ses-419!2sar" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d90467.83854046576!2d-60.779867669838396!3d-31.610485039551904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!3m2!1d-31.6106578!2d-60.697294!4m0!5e1!3m2!1ses-419!2sar!4v1733861449142!5m2!1ses-419!2sar"
+                    width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </footer>
-    
-    <div class="fl_bar"><p>Powered by B'nT</p></div>
+
+    <div class="fl_bar">
+        <p>Powered by B'nT</p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
