--- a/templates/item.html
+++ b/templates/item.html
@@ -57,12 +57,13 @@
     </header>
 
     <!-- Navbar para el diseño de pantallas small -->
+    <!-- Menú de navegación para dispositivos pequeños -->
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
             </div>
-            <!-- Botón de menú para pantallas pequeñas -->
+            <!-- Botón para abrir el menú lateral en pantallas pequeñas -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -71,24 +72,27 @@
             <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
+                    <!-- Título del menú lateral -->
                     <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENÚ</h5>
+                    <!-- Botón para cerrar el menú lateral -->
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
                 </div>
 
-                <!-- Cuerpo del menu responsive -->
                 <div class="offcanvas-body">
                     <div class="links_small_navbar">
+                        <!-- Menú lateral en pantallas pequeñas -->
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
                             <li><a href="productos.html">Productos</a></li>
+                            <!-- Secciones comentadas -->
                             <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                            <li><a href="verano.html">Verano</a></li>
-                            <li><a href="novedades.html">Novedades</a></li> -->
+                                <li><a href="verano.html">Verano</a></li>
+                                <li><a href="novedades.html">Novedades</a></li>-->
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
-                    <!-- Formulario de búsqueda en navbar small -->
+                    <!-- Formulario de búsqueda en el menú lateral -->
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
@@ -218,12 +222,12 @@
 
     </footer>
     <!-- Scripts de Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz4fnFO9gybpaB+OnL1RvmP+JcExChF93pXJp6t/5g5a7h0Jdfm15+5t9P" crossorigin="anonymous">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-vpYYhpN09x5ld1gZz4P0FvmhZh44wsbbr+6jLrD77+8z7X3lXT82zZl5t+DJkD1Y" crossorigin="anonymous">
-        </script>
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 
 </body>
 
